--- a/AgentPrediction_Test.ipynb
+++ b/AgentPrediction_Test.ipynb
@@ -74,7 +74,7 @@
     "# Test model loction\n",
     "path_load = ''\n",
     "# Test model base name\n",
-    "net_base_name = 'epoch_75'\n",
+    "net_base_name = ''\n",
     "\n",
     "# set env variable for data\n",
     "os.environ[\"L5KIT_DATA_FOLDER\"] = ''\n",
